# -open-source-diplomat-agent

./: README.md  skills-lock.json
open-source-diplomat-agent/: .env.example  .gitignore  GEMINI.md  README.md  pyproject.toml
open-source-diplomat-agent/app/: __init__.py  agent.py  prompts.py  schemas.py  tools.py
open-source-diplomat-agent/app/.adk/: session.db
open-source-diplomat-agent/tests/: test_agent.py
